[gd_scene load_steps=7 format=3 uid="uid://30ft5ipnpjpg"]

[ext_resource type="Script" uid="uid://bc378b8sp5pqc" path="res://Scenes/main.gd" id="1_bo1nx"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://btf2ryu3xdevh" path="res://Scenes/pipes.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://cgsr4aya2iad8" path="res://Scenes/bird.tscn" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://3xi2wb1xj0sm" path="res://Scenes/sol.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://cn8woptakkoeb" path="res://Scenes/game_over.tscn" id="6_21xkr"]

[node name="Main" type="Node"]
script = ExtResource("1_bo1nx")
pipe_scene = ExtResource("2_kry3j")

[node name="Arriere_plan" type="Sprite2D" parent="."]
texture = ExtResource("1_jjgbg")
offset = Vector2(432, 384)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Bird" parent="." instance=ExtResource("3_8gbba")]

[node name="Sol" parent="." instance=ExtResource("4_jjvhh")]
z_index = 1

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "SCORE : 0"

[node name="GameOver" parent="." instance=ExtResource("6_21xkr")]

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="hit" from="Sol" to="." method="_on_sol_hit"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
